--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Fahad Alsofyani, I hope that you are doing well.</h1>
-    <p>Riyadbank Project <a href="https://docs.microsoft.com/aspnet/core">The course is pretty interesting!!</a>.</p>
+    <h1 class="display-4">Today is the Thursday December 22</h1>
+    <p>Riyadbank Project <a href="https://docs.microsoft.com/aspnet/core">Application Deployment</a>.</p>
 </div>
